{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 472,
  "lineage": "8c9277ad-1844-8011-ca79-64bea8f6d285",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e65a1fbec0458f69",
            "arn": "arn:aws:ec2:ap-south-1:325698037625:elastic-ip/eipalloc-0e65a1fbec0458f69",
            "domain": "vpc",
            "id": "eipalloc-0e65a1fbec0458f69",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-234-149-135.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.149.135",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "eipalloc-0e65a1fbec0458f69",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:325698037625:instance/i-0cb6949db14914440",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb6949db14914440",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "SecDO",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a3a78e1f0f03a497"
              }
            ],
            "primary_network_interface_id": "eni-0a3a78e1f0f03a497",
            "private_dns": "ip-10-0-1-6.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-13-207-188-163.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.188.163",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b5e0c5b497947c3d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b06dc1b29e1cf7c9",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4dbada93415bd24"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "i-0cb6949db14914440",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:325698037625:instance/i-0d0b21bd20de22cd1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0b21bd20de22cd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "SecDO",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04b9acceb404ce5f5"
              }
            ],
            "primary_network_interface_id": "eni-04b9acceb404ce5f5",
            "private_dns": "ip-10-0-2-17.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.17",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01d15faa804180ba9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008c3f0d28a8514c6",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0329bd6b8326bdb31"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "i-0d0b21bd20de22cd1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_route_table_association.private_assoc",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.jenkins_sg",
            "aws_subnet.private",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:325698037625:instance/i-087ac45d61dc1dbc4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087ac45d61dc1dbc4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "SecDO",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02cf8c72067116311"
              }
            ],
            "primary_network_interface_id": "eni-02cf8c72067116311",
            "private_dns": "ip-10-0-2-125.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.125",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04efd371d6ac90318",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008c3f0d28a8514c6",
            "tags": {
              "Name": "Monitoring"
            },
            "tags_all": {
              "Name": "Monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0033592ff65db6fe3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "i-087ac45d61dc1dbc4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_route_table_association.private_assoc",
            "aws_security_group.alb_sg",
            "aws_security_group.monitoring_sg",
            "aws_subnet.private",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e38835daf6b8a2b9",
            "arn": "arn:aws:ec2:ap-south-1:325698037625:instance/i-0ae4de67114739347",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae4de67114739347",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "SecDO",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cd58ef34bbca125b"
              }
            ],
            "primary_network_interface_id": "eni-0cd58ef34bbca125b",
            "private_dns": "ip-10-0-2-92.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.92",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0966f700855de5710",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008c3f0d28a8514c6",
            "tags": {
              "Name": "SonarQube"
            },
            "tags_all": {
              "Name": "SonarQube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090eb4f7714d0615b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "i-0ae4de67114739347",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_route_table_association.private_assoc",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.sonarqube_sg",
            "aws_subnet.private",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:internet-gateway/igw-088075121e35c7c7c",
            "id": "igw-088075121e35c7c7c",
            "owner_id": "325698037625",
            "region": "ap-south-1",
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "igw-088075121e35c7c7c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jenkins_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:loadbalancer/app/jenkins-alb/71c757e7ff226537",
            "arn_suffix": "app/jenkins-alb/71c757e7ff226537",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-alb-110865238.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:loadbalancer/app/jenkins-alb/71c757e7ff226537",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-03438e7e567fac946"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08b59f37a356985a8"
              },
              {
                "subnet_id": "subnet-0b06dc1b29e1cf7c9"
              }
            ],
            "subnets": [
              "subnet-08b59f37a356985a8",
              "subnet-0b06dc1b29e1cf7c9"
            ],
            "vpc_id": "vpc-008cc5859a85261f8",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:loadbalancer/app/jenkins-alb/71c757e7ff226537"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/jenkins-tg/ab7af07e16a2d1c0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:loadbalancer/app/jenkins-alb/71c757e7ff226537",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497"
          },
          "dependencies": [
            "aws_lb.jenkins_alb",
            "aws_lb_target_group.jenkins_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/grafana-tg/ef6ded42b98274ee",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener-rule/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497/66c95644f642a3d7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/grafana*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener-rule/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497/66c95644f642a3d7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497",
            "priority": 20,
            "region": "ap-south-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener-rule/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497/66c95644f642a3d7"
          },
          "dependencies": [
            "aws_lb.jenkins_alb",
            "aws_lb_listener.http",
            "aws_lb_target_group.grafana_tg",
            "aws_lb_target_group.jenkins_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/prometheus-tg/8eeb8f10124a60ea",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener-rule/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497/280fb013178b22e7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/prometheus*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener-rule/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497/280fb013178b22e7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497",
            "priority": 30,
            "region": "ap-south-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener-rule/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497/280fb013178b22e7"
          },
          "dependencies": [
            "aws_lb.jenkins_alb",
            "aws_lb_listener.http",
            "aws_lb_target_group.jenkins_tg",
            "aws_lb_target_group.prometheus_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/sonarqube-tg/49970a7b1e799b5c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener-rule/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497/fe86d1881036f4b3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/sonar*",
                      "/sonarqube*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener-rule/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497/fe86d1881036f4b3",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497",
            "priority": 100,
            "region": "ap-south-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:listener-rule/app/jenkins-alb/71c757e7ff226537/9b8560c9c8732497/fe86d1881036f4b3"
          },
          "dependencies": [
            "aws_lb.jenkins_alb",
            "aws_lb_listener.http",
            "aws_lb_target_group.jenkins_tg",
            "aws_lb_target_group.sonarqube_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grafana_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/grafana-tg/ef6ded42b98274ee",
            "arn_suffix": "targetgroup/grafana-tg/ef6ded42b98274ee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/grafana-tg/ef6ded42b98274ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "grafana-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/grafana-tg/ef6ded42b98274ee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/jenkins-tg/ab7af07e16a2d1c0",
            "arn_suffix": "targetgroup/jenkins-tg/ab7af07e16a2d1c0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/jenkins-tg/ab7af07e16a2d1c0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/jenkins-tg/ab7af07e16a2d1c0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prometheus_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/prometheus-tg/8eeb8f10124a60ea",
            "arn_suffix": "targetgroup/prometheus-tg/8eeb8f10124a60ea",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/prometheus-tg/8eeb8f10124a60ea",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prometheus-tg",
            "port": 9090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/prometheus-tg/8eeb8f10124a60ea"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sonarqube_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/sonarqube-tg/49970a7b1e799b5c",
            "arn_suffix": "targetgroup/sonarqube-tg/49970a7b1e799b5c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/sonarqube-tg/49970a7b1e799b5c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sonarqube-tg",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/sonarqube-tg/49970a7b1e799b5c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "grafana_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/grafana-tg/ef6ded42b98274ee,i-087ac45d61dc1dbc4,3000",
            "port": 3000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/grafana-tg/ef6ded42b98274ee",
            "target_id": "i-087ac45d61dc1dbc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "port": 3000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/grafana-tg/ef6ded42b98274ee",
            "target_id": "i-087ac45d61dc1dbc4"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.monitoring",
            "aws_internet_gateway.igw",
            "aws_lb_target_group.grafana_tg",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_route_table_association.private_assoc",
            "aws_security_group.alb_sg",
            "aws_security_group.monitoring_sg",
            "aws_subnet.private",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/jenkins-tg/ab7af07e16a2d1c0,i-0d0b21bd20de22cd1,8080",
            "port": 8080,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/jenkins-tg/ab7af07e16a2d1c0",
            "target_id": "i-0d0b21bd20de22cd1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "port": 8080,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/jenkins-tg/ab7af07e16a2d1c0",
            "target_id": "i-0d0b21bd20de22cd1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.jenkins",
            "aws_internet_gateway.igw",
            "aws_lb_target_group.jenkins_tg",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_route_table_association.private_assoc",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.jenkins_sg",
            "aws_subnet.private",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "prometheus_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/prometheus-tg/8eeb8f10124a60ea,i-087ac45d61dc1dbc4,9090",
            "port": 9090,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/prometheus-tg/8eeb8f10124a60ea",
            "target_id": "i-087ac45d61dc1dbc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "port": 9090,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/prometheus-tg/8eeb8f10124a60ea",
            "target_id": "i-087ac45d61dc1dbc4"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.monitoring",
            "aws_internet_gateway.igw",
            "aws_lb_target_group.prometheus_tg",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_route_table_association.private_assoc",
            "aws_security_group.alb_sg",
            "aws_security_group.monitoring_sg",
            "aws_subnet.private",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sonarqube_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/sonarqube-tg/49970a7b1e799b5c,i-0ae4de67114739347,9000",
            "port": 9000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/sonarqube-tg/49970a7b1e799b5c",
            "target_id": "i-0ae4de67114739347"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "port": 9000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:325698037625:targetgroup/sonarqube-tg/49970a7b1e799b5c",
            "target_id": "i-0ae4de67114739347"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.sonarqube",
            "aws_internet_gateway.igw",
            "aws_lb_target_group.sonarqube_tg",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_route_table_association.private_assoc",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.sonarqube_sg",
            "aws_subnet.private",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e65a1fbec0458f69",
            "association_id": "eipassoc-07b6b4d4a42bd38f4",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-067e2fd2f1f8e3173",
            "network_interface_id": "eni-0846f8bbf7e4e947d",
            "private_ip": "10.0.1.134",
            "public_ip": "13.234.149.135",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b06dc1b29e1cf7c9",
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "nat-067e2fd2f1f8e3173",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:route-table/rtb-095fd6a643fb6d355",
            "id": "rtb-095fd6a643fb6d355",
            "owner_id": "325698037625",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-067e2fd2f1f8e3173",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "rtb-095fd6a643fb6d355",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:route-table/rtb-03af0ba2092593406",
            "id": "rtb-03af0ba2092593406",
            "owner_id": "325698037625",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088075121e35c7c7c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "rtb-03af0ba2092593406",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091bdec49a8270ab0",
            "region": "ap-south-1",
            "route_table_id": "rtb-095fd6a643fb6d355",
            "subnet_id": "subnet-008c3f0d28a8514c6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "rtbassoc-091bdec49a8270ab0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1973328bae2085a",
            "region": "ap-south-1",
            "route_table_id": "rtb-03af0ba2092593406",
            "subnet_id": "subnet-0b06dc1b29e1cf7c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "rtbassoc-0a1973328bae2085a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cec6cb9da787f5e6",
            "region": "ap-south-1",
            "route_table_id": "rtb-03af0ba2092593406",
            "subnet_id": "subnet-08b59f37a356985a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "rtbassoc-0cec6cb9da787f5e6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:security-group/sg-03438e7e567fac946",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03438e7e567fac946",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "325698037625",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "sg-03438e7e567fac946",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:security-group/sg-0d4dbada93415bd24",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4dbada93415bd24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "325698037625",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "sg-0d4dbada93415bd24",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:security-group/sg-0329bd6b8326bdb31",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0329bd6b8326bdb31",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4dbada93415bd24"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03438e7e567fac946"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "325698037625",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "sg-0329bd6b8326bdb31",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:security-group/sg-0033592ff65db6fe3",
            "description": "Monitoring Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0033592ff65db6fe3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 9093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9093
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03438e7e567fac946"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03438e7e567fac946"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "monitoring-sg",
            "name_prefix": "",
            "owner_id": "325698037625",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "sg-0033592ff65db6fe3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:security-group/sg-090eb4f7714d0615b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090eb4f7714d0615b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4dbada93415bd24"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03438e7e567fac946"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube-sg",
            "name_prefix": "",
            "owner_id": "325698037625",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "sg-090eb4f7714d0615b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:subnet/subnet-008c3f0d28a8514c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008c3f0d28a8514c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325698037625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "subnet-008c3f0d28a8514c6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:subnet/subnet-0b06dc1b29e1cf7c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b06dc1b29e1cf7c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325698037625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "subnet-0b06dc1b29e1cf7c9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:subnet/subnet-08b59f37a356985a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b59f37a356985a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325698037625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-008cc5859a85261f8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "subnet-08b59f37a356985a8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:325698037625:vpc/vpc-008cc5859a85261f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-018edd739106bb351",
            "default_route_table_id": "rtb-03da1699859224e69",
            "default_security_group_id": "sg-0c2f18115d3d0f9ee",
            "dhcp_options_id": "dopt-04a3657059f1bf1e4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008cc5859a85261f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03da1699859224e69",
            "owner_id": "325698037625",
            "region": "ap-south-1",
            "tags": {
              "Name": "secdo-vpc"
            },
            "tags_all": {
              "Name": "secdo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "325698037625",
            "id": "vpc-008cc5859a85261f8",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}